Latest Articles - Gap fix
40px -> 30px

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ header {
   display: flex;
   flex-wrap: wrap; 
   justify-content: space-between; 
-  gap: 40px; 
+  gap: 30px; 
   margin: 45px 0px 70px 0px;
 }
 
